--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     </div>
     <footer class="container-fluid">
         <div>
-            <p class="small-text">&copy; 2017 Copyright Your Name </p>
+            <p class="small-text">&copy; 2018 Copyright Abhishek soni </p>
           <div class="social">
             <a href="https://www.linkedin.com/in/abhisheksoni27/"> <i class="fa fa-linkedin"></i> </a>
          
